# web_player

./: README.md  pyproject.toml  requirements.txt
src/apps/: consumers.py
src/apps/chat/: routing.py
src/apps/player/: admin.py  backends.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
src/apps/player/migrations/: 0001_initial.py  0002_rename_localion_tracklist_location.py  0003_alter_tracklist_id_alter_usermusic_id.py  0004_playlist.py
src/apps/player/static/css/: create_playlist.css  load_track.css  log-reg-page.css  login.css  mini_player.css  newplayer.css  player.css  style.css  user_music.css  user_playlists.css
src/apps/player/static/js_scripts/: mplayer.js  player.js  playlist_tracks.js  test_player.js  track_list_player.js  user_music.js  user_playlists.js
src/apps/player/templates/app/: base.html  create_playlist.html  homepage.html  load_track.html  log-reg-page.html  login.html  player.html  playlist_tracks.html  signup.html  user_music.html  user_playlists.html
src/config/: asgi.py  settings.py  urls.py
