[tool.poetry]
name = "web-player"
version = "0.1.0"
description = ""
authors = ["xpfxz <xpfxz@bk.ru>"]
readme = "README.md"
packages = [{include = "web_player"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
